<resources>
    <string name="app_name">s1030341</string>
    <string name="action_settings">Settings</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="dis">/</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="ten">十進位</string>
    <string name="sixteen">十六進位</string>
    <string name="backspace">←</string>
    <string name="clear">c</string>
    <string name="input">輸入年月日查詢星座</string>
    <string name="moon">月</string>
    <string name="date">日</string>
    <string name="lookfor">查詢</string>
    <string name="back">返回</string>
    <string name="year">年</string>
</resources>
